--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,15 @@
     android:installLocation="preferExternal"
     package="com.yazan98.culttrip.client">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:name=".CulltripApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
