--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,39 +1,23 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
-android {
-    compileSdkVersion 29
-
-    defaultConfig {
-
-        minSdkVersion 24
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
+dependencies { configuration ->
+    implementation project(":data")
+    lifeCycleConfiguration(configuration)
+    vortexConfiguration(configuration)
+    koinConfiguration(configuration)
+    databaseConfiguration(configuration)
 }
 
-dependencies {
+private void vortexConfiguration(configuration) {
+    def VortexConfiguration = rootProject.ext.VortexConfiguration
+    configuration.implementation VortexConfiguration.VortexCore
+    configuration.implementation VortexConfiguration.VortexLocal
+    configuration.implementation VortexConfiguration.VortexData
+    configuration.implementation VortexConfiguration.VortexPrefs
+}
 
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-
+private void koinConfiguration(configuration) {
+    def KoinConfiguration = rootProject.ext.KoinConfiguration
+    configuration.implementation KoinConfiguration.KoinAndroid
+    configuration.implementation KoinConfiguration.KoinLifecycle
+    configuration.implementation KoinConfiguration.KoinViewModel
 }
