finish the category page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:screenOrientation="fullSensor" />
 
         <activity
-            android:name=".screen.DiscoveryScreen"
+            android:name=".screen.OperationsScreen"
             android:screenOrientation="fullSensor" />
     </application>
 
