--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ apply plugin: "${rootProject.ext.KotlinAndroidExPlugin}"
 apply plugin: "${rootProject.ext.KotlinKaptPlugin}"
 apply plugin: "${rootProject.ext.navigationPlugin}"
 apply plugin: "${rootProject.ext.RealmPlugin}"
+apply plugin: "${rootProject.ext.FirebasePlugin}"
 
 android {
 
@@ -145,6 +146,9 @@ dependencies { configuration ->
     implementation project(":data")
     implementation project(":domain")
 
+    // add to Libraries.gradle
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation("com.google.android.material:material:1.2.0-alpha03")
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.1'
     implementation 'com.squareup.leakcanary:leakcanary-object-watcher-android:2.1'
