--- a/data/build.gradle
+++ b/data/build.gradle
@@ -21,6 +21,12 @@ dependencies { configuration ->
     vortexConfiguration(configuration)
     lifeCycleConfiguration(configuration)
     databaseConfiguration(configuration)
+
+    def work_version = "2.3.0"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation "androidx.work:work-rxjava2:$work_version"
+    implementation "androidx.work:work-gcm:$work_version"
+    androidTestImplementation "androidx.work:work-testing:$work_version"
 }
 
 private void rxJavaConfiguration(configuration) {
